# Testing-LSTMs---Waves

./: pyproject.toml
Notebooks/: 1.- Univariate regression - Many to One.ipynb  2.- LSTM Vanilla and Encoder-Decoder - Many to Many.ipynb
