[tool.poetry]
name = "predict_sequences"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
tensorflow = "^2.9.1"
matplotlib = "^3.5.2"
sklearn = "^0.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
